# geometry

./: DESCRIPTION  LICENSE  MD5  TODO  configure  configure.ac
R/: convhulln.R  distmesh2d-Oud+Fout.Rxxx  paint.fill.R  tetramesh.R
man/: Unique.Rd  convhulln.Rd  delaunayn.Rd  distmesh2d.Rd  distmeshnd.Rd  entry.value.Rd  mesh.dcircle.Rd  mesh.drectangle.Rd  mesh.dsphere.Rd  surf.tri.Rd
src/: Makevars  Makevars.in  convhulln.c  delaunayn.c  geometry_res.rc  global.c  io.c  qhull_a.h
src/src/: __voronoi__.c  geom.def
tests/: tsearch.R  tsearch.Rout.save
